Funciona, pero código muy sucio
